<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whacamole"
    tools:context=".WhacAMoleActivity">

    <ImageView
        android:id="@+id/whacbg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.025"
        app:srcCompat="@drawable/whacaccentbackground" />

    <TextView
        android:id="@+id/whacTitle"
        android:layout_width="330dp"
        android:layout_height="67dp"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/indie_flower"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/whacamole"
        android:textColor="@color/white"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="@+id/whacbg"
        app:layout_constraintEnd_toEndOf="@+id/whacbg"
        app:layout_constraintStart_toStartOf="@+id/whacbg"
        app:layout_constraintTop_toTopOf="@+id/whacbg" />

    <ImageView
        android:id="@+id/leaderboard"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/leaderboardicon" />

    <TextView
        android:id="@+id/levelindicator"
        android:layout_width="132dp"
        android:layout_height="31dp"
        android:fontFamily="@font/indie_flower"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="Level: 1"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.96" />

    <Button
        android:id="@+id/startBtn"
        android:layout_width="122dp"
        android:layout_height="53dp"
        android:onClick="onStartBtnClicked"
        android:text="@string/start"
        android:textSize="20sp"
        android:theme="@style/Button.WhacAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/whacbg"
        app:layout_constraintVertical_bias="0.014" />

    <LinearLayout
        android:id="@+id/playArea"
        android:layout_width="360dp"
        android:layout_height="496dp"
        android:orientation="vertical"
        android:weightSum="4"
        app:layout_constraintBottom_toTopOf="@+id/levelindicator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startBtn"
        app:layout_constraintVertical_bias="0.275">

        <LinearLayout
            android:id="@+id/row1"
            android:layout_width="match_parent"
            android:layout_height="124dp"
            android:orientation="horizontal"
            android:weightSum="1">

            <LinearLayout
                android:id="@+id/box1"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/mole1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|center_horizontal|center_vertical"
                    android:foregroundGravity="center_vertical|center|center_horizontal"
                    android:onClick="onMoleClicked"
                    app:srcCompat="@drawable/moleicon" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/box2"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/mole2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|center_horizontal|center_vertical"
                    android:foregroundGravity="center_vertical|center|center_horizontal"
                    android:onClick="onMoleClicked"
                    app:srcCompat="@drawable/moleicon" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/box3"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/mole3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|center_horizontal|center_vertical"
                    android:foregroundGravity="center_vertical|center|center_horizontal"
                    android:onClick="onMoleClicked"
                    app:srcCompat="@drawable/moleicon" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/row2"
            android:layout_width="match_parent"
            android:layout_height="124dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/box4"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/mole4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|center_horizontal|center_vertical"
                    android:foregroundGravity="center_vertical|center|center_horizontal"
                    android:onClick="onMoleClicked"
                    app:srcCompat="@drawable/moleicon" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/box5"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/mole5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|center_horizontal|center_vertical"
                    android:foregroundGravity="center_vertical|center|center_horizontal"
                    android:onClick="onMoleClicked"
                    app:srcCompat="@drawable/moleicon" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/box6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/mole6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|center_horizontal|center_vertical"
                    android:foregroundGravity="center_vertical|center|center_horizontal"
                    android:onClick="onMoleClicked"
                    app:srcCompat="@drawable/moleicon" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/row3"
            android:layout_width="match_parent"
            android:layout_height="124dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/box7"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/mole7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|center_horizontal|center_vertical"
                    android:foregroundGravity="center_vertical|center|center_horizontal"
                    android:onClick="onMoleClicked"
                    app:srcCompat="@drawable/moleicon" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/box8"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/mole8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|center_horizontal|center_vertical"
                    android:foregroundGravity="center_vertical|center|center_horizontal"
                    android:onClick="onMoleClicked"
                    app:srcCompat="@drawable/moleicon" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/box9"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/mole9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|center_horizontal|center_vertical"
                    android:foregroundGravity="center_vertical|center|center_horizontal"
                    android:onClick="onMoleClicked"
                    app:srcCompat="@drawable/moleicon" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/row4"
            android:layout_width="match_parent"
            android:layout_height="124dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/box10"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/mole10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|center_horizontal|center_vertical"
                    android:foregroundGravity="center_vertical|center|center_horizontal"
                    android:onClick="onMoleClicked"
                    app:srcCompat="@drawable/moleicon" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/box11"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/mole11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|center_horizontal|center_vertical"
                    android:foregroundGravity="center_vertical|center|center_horizontal"
                    android:onClick="onMoleClicked"
                    app:srcCompat="@drawable/moleicon" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/box12"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/mole12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|center_horizontal|center_vertical"
                    android:foregroundGravity="center_vertical|center|center_horizontal"
                    android:onClick="onMoleClicked"
                    app:srcCompat="@drawable/moleicon" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/score"
        android:layout_width="110dp"
        android:layout_height="65dp"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="22dp"
        android:fontFamily="@font/indie_flower"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/score"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/playArea"
        app:layout_constraintEnd_toStartOf="@+id/startBtn"
        app:layout_constraintHorizontal_bias="0.735"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/whacbg"
        app:layout_constraintVertical_bias="0.411" />

    <TextView
        android:id="@+id/highscore"
        android:layout_width="110dp"
        android:layout_height="65dp"
        android:layout_marginTop="21dp"
        android:layout_marginBottom="26dp"
        android:fontFamily="@font/indie_flower"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/highscore"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/playArea"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.257"
        app:layout_constraintStart_toEndOf="@+id/startBtn"
        app:layout_constraintTop_toBottomOf="@+id/whacbg"
        app:layout_constraintVertical_bias="0.466" />

    <TextView
        android:id="@+id/curMissed"
        android:layout_width="132dp"
        android:layout_height="25dp"
        android:fontFamily="@font/indie_flower"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/missed"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.36"
        app:layout_constraintStart_toEndOf="@+id/leaderboard"
        app:layout_constraintTop_toBottomOf="@+id/levelindicator"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>